# sqs-simple-example

./: .bandit.yml  .checkov.yaml  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tflint.hcl  README.md  Taskfile.yml
cicd/: buildspec.yml  codebuild-policy.tftpl  codebuild.tf  data.tf  iam.tf  locals.tf  terraform.tf  variables.tf
lambdas/consumer/: README.md  pyproject.toml
lambdas/consumer/src/consumer/: config.py  lambda_function.py
lambdas/consumer/tests/: events.py  test_funcs.py
lambdas/producer/: README.md  pyproject.toml
lambdas/producer/src/producer/: config.py  lambda_function.py
lambdas/producer/tests/: events.py  test_funcs.py
scripts/: write-to-s3.py
terraform/: .terraform.lock.hcl  buildspec.yml  cloudwatch.tf  codebuild.tf  data.tf  iam.tf  lambda.tf  locals.tf  s3.tf  sns.tf  sqs.tf  ssm.tf  terraform.tf  variables.tf
