[project]
name = "consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Green",email = "erikgreen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.38.41,<2.0.0)",
    "aws_lambda_powertools (>=3.15.1,<4.0.0); python_version >= '3.13' and python_version < '4.0.0'"
]

[tool.poetry]
packages = [{include = "consumer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
