[project]
name = "producer"
version = "0.1.0"
description = ""
authors = [
    {name = "Erik Green",email = "erikgreen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lorem (>=0.1.1,<0.2.0)",
    "boto3 (>=1.38.41,<2.0.0)",
    "aws_lambda_powertools (>=3.15.1,<4.0.0); python_version >= '3.13' and python_version < '4.0.0'"
]

[tool.poetry]
packages = [{include = "producer", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "package.zip"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
